<?xml version="1.0"?>
<package format="3">
  <name>pyroboy</name>
  <version>0.0.1</version>
  <description>Package containing Roboy interfaces.</description>
  <maintainer email="unicorn@roboy.org">Alona Kharchenko</maintainer>
  <license>BDS-3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>roboy_cognition_msgs</depend>
  <depend>roboy_simulation_msgs</depend>
  <depend>roboy_control_msgs</depend>
  <depend>roboy_middleware_msgs</depend>

  <!-- <export>
    <build_type>ament_python</build_type>
  </export> -->
</package>
